Icon Block Improvements - remove id attribute - remove hover colors - change css to inline style - store link attribute in html - use native align feature - remove lightsalmon color on hover - add transition on hover - fix move from edit page on icon click

--- a/src/blocks/icon/style.scss
+++ b/src/blocks/icon/style.scss
@@ -1,10 +1,3 @@
-// for preview
-//.wp-block-getwid-icon{
-//    display: inline-block;
-//    margin: 20px;
-//}
-// ----------
-
 .wp-block-getwid-icon{
     &--framed{
         .wp-block-getwid-icon__wrapper{
@@ -40,13 +33,10 @@
         }
     }
     a.wp-block-getwid-icon__wrapper{
-        //color: currentColor;
         text-decoration: none;
-        //transition: all .3s ease;
+        transition: all .3s ease;
         &:hover{
             cursor: pointer;
-            color: lightsalmon;
-            //border-color: whitesmoke;
         }
     }
 }
